<resources>
    <string name="app_name">SplitSmart</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>

    <string name="welcome_message">Welcome to SplitSmart!</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    <string name="log_in_message">Enter your login information below.</string>
    <string name="sign_up_message">Enter your username and password for your new account below.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>

    <string name="no_group_message">You are not in a group. You can either join an existing group, or create your own!</string>
    <string name="create_group_message">Enter details for New Group</string>
    <string name="join_group_message">Enter details for the group you would like to join</string>
    <string name="group_message">It\'s the group</string>
    <string name="group_name">Group Name</string>
    <string name="group_password">Group Password</string>
    <string name="join_group">Join Group</string>
    <string name="create_group">Create Group</string>
    <string name="create_expense">Create Expense</string>
    <string name="reporting">Reporting</string>
    <string name="manage_group">Manage Group</string>
    <string name="join_code">Join Code</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="message_create_expense">Enter details for the new expense</string>
    <string name="message_expense_split">Select all of the group members who were involved in this expense</string>
    <string name="amount">Amount</string>
    <string name="select_a_group_member">Select a group member</string>
    <string name="use_custom_amount">Use Custom Amount</string>
    <string name="message_expense_split_2">Enter custom amounts if desired, then press Next when finished.</string>
    <string name="message_report_type_select">Select a Report to View</string>
    <string name="balances_owed">Balances Owed</string>
    <string name="transaction_log">Transaction Log</string>
    <string name="message_balances_owed">Current Balances Owed:</string>
    <string name="make_payment">Make Payment</string>
    <string name="message_balances_make_payment">Select a user to make a payment to. Note that you cannot make a payment to a user who currently owes you.</string>
    <string name="recipient">Recipient</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="view">View</string>
    <string name="message_transaction_log">Transactions</string>
    <string name="filters">Filters</string>
    <string name="back">Back</string>
    <string name="message_expense_filter">Enter filter options</string>
    <string name="maximum_amount">Maximum Amount</string>
    <string name="minimum_date">Minimum Date</string>
    <string name="maximum_date">Maximum Date</string>
    <string name="payer">Payer</string>
    <string name="only_include_transactions_that_involve_me">Only include transactions that involve me</string>
    <string name="apply">Apply</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="message_create_receipt">Optionally, upload a receipt image for this expense</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="no_receipt">This expense does not have a receipt</string>
    <string name="show_receipt">Show Receipt</string>
    <string name="manage_group_long_description">To add additional users to this group, you will need to have them join the group using the group name, password, and unique 4-character join code for this group.</string>
    <string name="manage_group_long_description_2">As the group owner, you can delete users from this group at any time. Note that expenses and payments from removed users will be preserved upon deletion, but they cannot be added to new expenses.</string>
    <string name="group_management">Group Management</string>
</resources>