<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_report_type_select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/button_balances_owed"
            android:text="@string/balances_owed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button_transaction_log"
            android:text="@string/transaction_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_balances_owed"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button_back"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_transaction_log"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>