<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_balances_make_payment"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <Spinner
        android:id="@+id/spinner_recipient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_below="@id/textview_first"
        android:contentDescription="@string/select_a_group_member"/>
    <TextView
        android:id="@+id/label_recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/recipient"
        android:layout_below="@id/spinner_recipient"
        android:layout_alignStart="@id/spinner_recipient"/>

    <EditText
        android:id="@+id/edittext_payment_amount"
        android:inputType="numberDecimal"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner_recipient"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/label_group_name"
        android:text="@string/payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edittext_payment_amount"
        android:layout_below="@id/edittext_payment_amount"
        android:layout_alignStart="@id/edittext_payment_amount"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"/>

    <TextView
        android:id="@+id/tv_max_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_recipient"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/button_make_payment"
            android:text="@string/make_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button_back"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_make_payment"/>
    </RelativeLayout>
</RelativeLayout>