<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_group_message"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textview_first">
        <Button
            android:id="@+id/button_join_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_group"
            android:layout_above="@id/button_create_group"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/button_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:layout_above="@id/button_sign_out"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>
    </RelativeLayout>
</RelativeLayout>