<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/message"
        android:text="@string/message_create_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/edittext_amount"
        android:inputType="numberDecimal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/label_group_name"
        android:labelFor="@id/edittext_amount"
        android:text="@string/expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:layout_alignStart="@id/edittext_amount"/>

    <EditText
        android:id="@+id/edittext_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <TextView
        android:id="@+id/label_date"
        android:labelFor="@id/edittext_date"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_date"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:layout_alignStart="@id/edittext_date"/>

    <EditText
        android:id="@+id/edittext_desc"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_date"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/label_desc"
        android:labelFor="@id/edittext_desc"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_desc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:layout_alignStart="@id/edittext_desc"/>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_next"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_next"/>
    </RelativeLayout>
</RelativeLayout>