<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/message"
        android:text="@string/message_expense_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edittext_amount_min"
        android:inputType="numberDecimal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:text="Minimum Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:labelFor="@id/edittext_amount_min"
        android:layout_below="@id/edittext_amount_min"
        android:layout_alignStart="@id/edittext_amount_min"/>
    <EditText
        android:id="@+id/edittext_amount_max"
        android:inputType="numberDecimal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_toEndOf="@id/edittext_amount_min"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:text="@string/maximum_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:labelFor="@id/edittext_amount_max"
        android:layout_below="@id/edittext_amount_max"
        android:layout_alignStart="@id/edittext_amount_max"/>

    <EditText
        android:id="@+id/edittext_date_min"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount_min"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:clickable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <TextView
        android:text="@string/minimum_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:labelFor="@id/edittext_date_min"
        android:layout_below="@id/edittext_date_min"
        android:layout_alignStart="@id/edittext_date_min"/>
    <EditText
        android:id="@+id/edittext_date_max"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_amount_min"
        android:layout_toEndOf="@id/edittext_date_min"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:clickable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <TextView
        android:text="@string/maximum_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:labelFor="@id/edittext_date_max"
        android:layout_below="@id/edittext_date_max"
        android:layout_alignStart="@id/edittext_date_max"/>

    <EditText
        android:id="@+id/edittext_desc"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_date_min"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:labelFor="@id/edittext_desc"
        android:layout_below="@id/edittext_desc"
        android:layout_alignStart="@id/edittext_desc"/>

    <Spinner
        android:id="@+id/spinner_payer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edittext_desc"
        android:layout_marginTop="50dp"/>
    <TextView
        android:text="@string/payer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/spinner_payer"/>

    <CheckBox
        android:id="@+id/checkbox_only_relevant_to_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_payer"
        android:layout_marginTop="50dp"
        android:text="@string/only_include_transactions_that_involve_me"/>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_apply"
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>